--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "axios": "^1.10.0",
-    "tailwindcss": "^4.1.10"
+    "axios": "^1.10.0"
   }
 }
